# vins-fusion-ros2

src/camera_models/: CMakeLists.txt  package.xml
src/camera_models/Debug-build/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  camera_models.cbp  cmake_install.cmake
src/camera_models/Debug-build/.cmake/api/v1/reply/: cache-v2-4cbe615c671e88153dcd.json  cmakeFiles-v1-352d7138db74ddc0f925.json  codemodel-v2-d0d347f2d54426842bf3.json  directory-.-Release-7bfad0e2e3c24a2598d9.json  index-2024-06-11T02-50-39-0606.json  target-Calibrations-Release-e021c2784b207406aa1a.json  target-camera_models-Release-06b95251817c6a73cc19.json  target-camera_models_uninstall-Release-5952b25c032467a1af52.json  target-uninstall-Release-632259e7ab8e0cd22083.json
src/camera_models/Debug-build/ament_cmake_core/: camera_modelsConfig.cmake  package.cmake
src/camera_models/Debug-build/ament_cmake_core/stamps/: package.xml.stamp
src/camera_models/Debug-build/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
src/camera_models/Debug-build/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
src/camera_models/include/camodocal/camera_models/: Camera.h
src/camera_models/src/: intrinsic_calib.cc
src/camera_models/src/camera_models/: Camera.cc  CameraFactory.cc
src/camera_models/src/chessboard/: Chessboard.cc
src/global_fusion/: CMakeLists.txt
src/global_fusion/Debug-build/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  global_fusion.cbp
src/global_fusion/Debug-build/.cmake/api/v1/reply/: cache-v2-d7afaa894de9d9beaa4d.json  cmakeFiles-v1-0eda7cdd2f563c0b1db0.json  codemodel-v2-43e18fbc88a13a7c4196.json  directory-.-Release-a2703ba70fb50d7bac1d.json  directory-ThirdParty.GeographicLib-Release-4b84ed241d5f26778a5b.json  index-2024-06-12T02-01-43-0003.json  target-global_fusion_node-Release-c4d75dd8863bf5102bc8.json  target-global_fusion_uninstall-Release-5283a85b7763fe7506b2.json  target-libGeographiccc-Release-1bb3c193a2675942600f.json  target-uninstall-Release-20d9b211a8071a882786.json
src/global_fusion/Debug-build/ament_cmake_core/: global_fusionConfig.cmake  package.cmake
src/global_fusion/Debug-build/ament_cmake_core/stamps/: package.xml.stamp
src/global_fusion/Debug-build/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
src/global_fusion/Debug-build/ament_cmake_index/share/ament_index/resource_index/package_run_dependencies/: global_fusion
src/global_fusion/Debug-build/ament_cmake_index/share/ament_index/resource_index/parent_prefix_path/: global_fusion
src/global_fusion/Debug-build/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
src/global_fusion/src/: Factors.h  globalOpt.cpp  globalOpt.h  globalOptNode.cpp
src/hobot_stereo_mipi_cam/: README.md  (+2 more)
src/loop_fusion/: CMakeLists.txt  package.xml
src/loop_fusion/Debug-build/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  loop_fusion.cbp
src/loop_fusion/Debug-build/.cmake/api/v1/reply/: cache-v2-5a6e8f70c0a5d5c42735.json  cmakeFiles-v1-d8ad423e5c5f13e5f599.json  codemodel-v2-e408c5e1ec06ae6e1388.json  directory-.-Release-3a188b79bd2b3a857809.json  index-2024-06-13T08-47-27-0324.json  target-loop_fusion_node-Release-2beaca85bbee0584df96.json  target-loop_fusion_uninstall-Release-1f3ecd028b146b7bfcfd.json  target-uninstall-Release-5b56841e0ccbba3db40d.json
src/loop_fusion/Debug-build/ament_cmake_core/: loop_fusionConfig.cmake  package.cmake
src/loop_fusion/Debug-build/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
src/loop_fusion/Debug-build/ament_cmake_index/share/ament_index/resource_index/package_run_dependencies/: loop_fusion
src/loop_fusion/Debug-build/ament_cmake_index/share/ament_index/resource_index/parent_prefix_path/: loop_fusion
src/loop_fusion/Debug-build/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
src/loop_fusion/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
src/loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
src/sensor_pub/: CMakeLists.txt  package.xml
src/sensor_pub/config/: euroc_config.yaml  rviz_vins_config.rviz
src/sensor_pub/src/: euroc_pub.cpp  util.hpp
src/vins_estimator/: CMakeLists.txt  package.xml
src/vins_estimator/Debug-build/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  vins.cbp
src/vins_estimator/Debug-build/.cmake/api/v1/reply/: cache-v2-b261812dbbb6971cf3a2.json  cmakeFiles-v1-64ab843754ffc854a7c2.json  codemodel-v2-31d78963e6acb7a2fcaa.json  directory-.-Release-1de099233b8c6192b3de.json  index-2024-06-13T07-18-52-0849.json  target-kitti_gps_test-Release-dfe7c848485129aa3e3b.json  target-kitti_odom_test-Release-408a1f884ca2810a7b04.json  target-uninstall-Release-8049ef34ffd05f872c7a.json  target-vins_lib-Release-4387dd02f45d8ce3874b.json  target-vins_node-Release-f095e75eabf9d0bc3165.json  target-vins_uninstall-Release-2467d69371f84dfbc983.json
src/vins_estimator/Debug-build/ament_cmake_core/: package.cmake  vinsConfig.cmake
src/vins_estimator/Debug-build/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
src/vins_estimator/Debug-build/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
src/vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
src/vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp
src/vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
src/vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
src/vins_estimator/src/utility/: CameraPoseVisualization.h  visualization.cpp  visualization.h
(+26 files in other folders)
