<?xml version="1.0"?>
<package format="3">
  <name>camera_models</name>
  <version>0.0.0</version>
  <description>The camera_models package</description>

  <maintainer email="dvorak@todo.todo">dvorak</maintainer>

  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>